--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
+:root{
+    --color-letras: #f8f9fa
+}
+
+
+body{
+    background-color: #000;
+    color: var(--color-letras);
+}
+
+
 a{
     text-decoration: none;
 }
 
 .titulo-index-sec-1{
     text-align: center;
+}
+
+/*Clase para imagenes de galeria*/
+.object-fit-cover {
+  object-fit: cover; /* Recorta la imagen manteniendo proporciones */
+  width: 100%;
+  height: 100%;
+  border: 2px solid #0d6efd;
+  transition: transform 0.3s ease;
+}
+
+.object-fit-cover:hover{
+    transform: scale(1.1);
 }
