--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 :root{
-    --color-letras: #f8f9fa
+    --color-azul: #0d6efd
 }
 
 
 body{
     background-color: #000;
-    color: var(--color-letras);
+}
+
+.cartas-exploracion{
+    transition: transform 0.3s ease;
+}
+
+.cartas-exploracion:hover{
+    opacity: .8;
+    outline: auto;
+    transform: scale(1.1);
+    color: var(--color-azul) !important
 }
 
 
@@ -22,10 +32,14 @@ a{
   object-fit: cover; /* Recorta la imagen manteniendo proporciones */
   width: 100%;
   height: 100%;
-  border: 2px solid #0d6efd;
   transition: transform 0.3s ease;
 }
 
 .object-fit-cover:hover{
     transform: scale(1.1);
+    box-shadow: 0 10px 20px var(--color-azul);
+}
+
+.tarjetas-nacimiento:hover{
+    color: var(--color-azul) !important
 }
